Add configuration, remove RpcRole, add CoderSdk

--- a/Vpn/Vpn.csproj
+++ b/Vpn/Vpn.csproj
@@ -11,4 +11,8 @@
         <ProjectReference Include="..\Vpn.Proto\Vpn.Proto.csproj"/>
     </ItemGroup>
 
+    <ItemGroup>
+        <PackageReference Include="System.IO.Pipelines" Version="9.0.0"/>
+    </ItemGroup>
+
 </Project>
