--- a/Vpn.Service/Vpn.Service.csproj
+++ b/Vpn.Service/Vpn.Service.csproj
@@ -11,10 +11,13 @@
     <ItemGroup>
         <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.0"/>
         <PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="9.0.0"/>
+        <PackageReference Include="Microsoft.Extensions.Options.DataAnnotations" Version="9.0.0"/>
         <PackageReference Include="Microsoft.Security.Extensions" Version="1.3.0"/>
+        <PackageReference Include="Semver" Version="3.0.0"/>
     </ItemGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\CoderSdk\CoderSdk.csproj"/>
         <ProjectReference Include="..\Vpn\Vpn.csproj"/>
     </ItemGroup>
 
