--- a/Vpn.Service/Vpn.Service.csproj
+++ b/Vpn.Service/Vpn.Service.csproj
@@ -6,19 +6,20 @@
         <TargetFramework>net8.0-windows</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.0"/>
-        <PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="9.0.0"/>
-        <PackageReference Include="Microsoft.Extensions.Options.DataAnnotations" Version="9.0.0"/>
-        <PackageReference Include="Microsoft.Security.Extensions" Version="1.3.0"/>
-        <PackageReference Include="Semver" Version="3.0.0"/>
+        <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.1" />
+        <PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="9.0.1" />
+        <PackageReference Include="Microsoft.Extensions.Options.DataAnnotations" Version="9.0.1" />
+        <PackageReference Include="Microsoft.Security.Extensions" Version="1.3.0" />
+        <PackageReference Include="Semver" Version="3.0.0" />
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\CoderSdk\CoderSdk.csproj"/>
-        <ProjectReference Include="..\Vpn\Vpn.csproj"/>
+        <ProjectReference Include="..\CoderSdk\CoderSdk.csproj" />
+        <ProjectReference Include="..\Vpn\Vpn.csproj" />
     </ItemGroup>
 
 </Project>
