--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -18,7 +18,7 @@ jobs:
         with:
           dotnet-version: 8.0.x
           cache: true
-          cache-dependency-path: */packages.lock.json
+          cache-dependency-path: '**/packages.lock.json'
       - name: Install dotnet format tool
         run: dotnet tool install -g dotnet-format
       - name: dotnet restore
