--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -19,12 +19,10 @@ jobs:
           dotnet-version: 8.0.x
           cache: true
           cache-dependency-path: '**/packages.lock.json'
-      - name: Install dotnet format tool
-        run: dotnet tool install -g dotnet-format
       - name: dotnet restore
-        run: dotnet restore --locked-mode .\Coder.Desktop.sln
+        run: dotnet restore --locked-mode
       - name: dotnet format
-        run: dotnet format --verify-no-changes --no-restore .\Coder.Desktop.sln
+        run: dotnet format --verify-no-changes --no-restore
 
   test:
     runs-on: windows-latest
@@ -35,10 +33,11 @@ jobs:
         with:
           dotnet-version: 8.0.x
           cache: true
+          cache-dependency-path: '**/packages.lock.json'
       - name: dotnet restore
-        run: dotnet restore --locked-mode .\Coder.Desktop.sln
+        run: dotnet restore --locked-mode
       - name: dotnet test
-        run: dotnet test --no-restore .\Coder.Desktop.sln
+        run: dotnet test --no-restore
 
   build:
     runs-on: windows-latest
@@ -49,12 +48,13 @@ jobs:
         with:
           dotnet-version: 8.0.x
           cache: true
+          cache-dependency-path: '**/packages.lock.json'
       - name: dotnet restore
-        run: dotnet restore --locked-mode .\Coder.Desktop.sln
+        run: dotnet restore --locked-mode
       - name: dotnet build
-        run: dotnet build .\Coder.Desktop.sln
+        run: dotnet build
       - name: dotnet publish
-        run: dotnet publish .\Coder.Desktop.sln -c Release -o .\publish
+        run: dotnet publish --no-restore --configuration Release --output .\publish
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
