--- a/.gitignore
+++ b/.gitignore
@@ -186,7 +186,7 @@ publish/
 *.azurePubxml
 # Note: Comment the next line if you want to checkin your web deploy settings,
 # but database connection strings (with potential passwords) will be unencrypted
-*.pubxml
+#*.pubxml
 *.publishproj
 
 # Microsoft Azure Web App publish settings. Comment the next line if you want to
@@ -401,3 +401,5 @@ FodyWeavers.xsd
 .idea/**/workspace.xml
 .idea/**/usage.statistics.xml
 .idea/**/shelf
+
+publish
