--- a/App/App.csproj
+++ b/App/App.csproj
@@ -42,6 +42,24 @@
     </ItemGroup>
 
     <ItemGroup>
+      <Page Update="SignInTokenPage.xaml">
+        <Generator>MSBuild:Compile</Generator>
+      </Page>
+    </ItemGroup>
+
+    <ItemGroup>
+      <Page Update="SignInWindow.xaml">
+        <Generator>MSBuild:Compile</Generator>
+      </Page>
+    </ItemGroup>
+
+    <ItemGroup>
+      <Page Update="SignInURLPage.xaml">
+        <Generator>MSBuild:Compile</Generator>
+      </Page>
+    </ItemGroup>
+
+    <ItemGroup>
         <Page Update="TrayIcon.xaml">
             <Generator>MSBuild:Compile</Generator>
         </Page>
