--- a/Tests.Vpn.Proto/Tests.Vpn.Proto.csproj
+++ b/Tests.Vpn.Proto/Tests.Vpn.Proto.csproj
@@ -1,6 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
+        <AssemblyName>Coder.Desktop.Tests.Vpn.Proto</AssemblyName>
         <RootNamespace>Coder.Desktop.Tests.Vpn.Proto</RootNamespace>
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
