--- a/Vpn.Service/Vpn.Service.csproj
+++ b/Vpn.Service/Vpn.Service.csproj
@@ -7,7 +7,21 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
+
+        <AssemblyName>CoderVpnService</AssemblyName>
+        <ApplicationIcon>coder.ico</ApplicationIcon>
     </PropertyGroup>
+
+    <PropertyGroup Condition="$(Configuration) == 'Release'">
+        <PublishTrimmed>false</PublishTrimmed>
+        <!-- <TrimMode>CopyUsed</TrimMode> -->
+        <PublishReadyToRun>true</PublishReadyToRun>
+        <SelfContained>false</SelfContained>
+    </PropertyGroup>
+
+    <ItemGroup>
+      <Content Include="coder.ico" />
+    </ItemGroup>
 
     <ItemGroup>
         <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.1" />
