--- a/Vpn.Service/Vpn.Service.csproj
+++ b/Vpn.Service/Vpn.Service.csproj
@@ -7,6 +7,7 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
+        <LangVersion>13</LangVersion>
 
         <AssemblyName>CoderVpnService</AssemblyName>
         <ApplicationIcon>coder.ico</ApplicationIcon>
