--- a/Vpn/Vpn.csproj
+++ b/Vpn/Vpn.csproj
@@ -14,6 +14,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.1" />
         <PackageReference Include="Semver" Version="3.0.0" />
         <PackageReference Include="System.IO.Pipelines" Version="9.0.1" />
     </ItemGroup>
