--- a/Installer/Installer.csproj
+++ b/Installer/Installer.csproj
@@ -17,6 +17,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.4" />
         <PackageReference Include="WixSharp_wix4" Version="2.6.0" />
         <PackageReference Include="WixSharp_wix4.bin" Version="2.6.0" />
         <PackageReference Include="CommandLineParser" Version="2.9.1" />
